--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -358,6 +358,18 @@
 	url={http://www.osapublishing.org/abstract.cfm?URI=josa-70-8-998}
 }
 
+@article{Sutton-AIAA-1969,
+	author={G. W. Sutton},
+	year={1969},
+	title={Effect of turbulent fluctuations in an optically active fluid medium.},
+	journal={AIAA Journal},
+	volume={7},
+	number={9},
+	pages={1737-1743},
+	isbn={0001-1452},
+	doi={10.2514/3.5384}
+}
+
 @article{Wang-2012-AnnualReview,
 	author={Meng Wang and Ali Mani and Stanislav Gordeyev},
 	year={2012},
