--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -301,6 +301,21 @@
   url={http://proxy.library.nd.edu/login?url=http://search.proquest.com.proxy.library.nd.edu/docview/1810591918?accountid=12874},
 }
 
+@inproceedings{Ranade-2016-SanDiego,
+author={Ranade, Piyush M. and Duvvuri, Subrahmanyam and McKeon, Beverley J. and Gordeyev, Stanislav and Christensen, Kenneth T. and 		Jumper, Eric J.},
+chapter={Turbulence Amplitude Modulation in an Externally Forced, Subsonic Turbulent Boundary Layer},
+series={AIAA SciTech Forum},
+year={2016},
+month={Jan},
+day={02},
+publisher={American Institute of Aeronautics and Astronautics},
+note={0},
+doi={10.2514/6.2016-1120},
+url={http://dx.doi.org/10.2514/6.2016-1120}
+}
+
+
+
 @article{Ross-2009-ApplOptics,
     author = {T. Sean Ross},
     journal = {Appl. Opt.},
