Fixed Piyush San Diego Entry

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -302,19 +302,14 @@
 }
 
 @inproceedings{Ranade-2016-SanDiego,
-author={Ranade, Piyush M. and Duvvuri, Subrahmanyam and McKeon, Beverley J. and Gordeyev, Stanislav and Christensen, Kenneth T. and 		Jumper, Eric J.},
-chapter={Turbulence Amplitude Modulation in an Externally Forced, Subsonic Turbulent Boundary Layer},
-series={AIAA SciTech Forum},
-year={2016},
-month={Jan},
-day={02},
-publisher={American Institute of Aeronautics and Astronautics},
-note={0},
-doi={10.2514/6.2016-1120},
-url={http://dx.doi.org/10.2514/6.2016-1120}
+    author={Ranade, Piyush M. and Duvvuri, Subrahmanyam and McKeon, Beverley J. and Gordeyev, Stanislav and Christensen, Kenneth T. and Jumper, Eric J.},
+	year={2016},
+	title={Turbulence Amplitude Modulation in an Externally Forced, Subsonic Turbulent Boundary Layer},
+	eventdate={4 - 8 January 2016},
+	booktitle= {54th AIAA Aerospace Sciences Meeting},
+	location={San Diego, CA},
+	note={AIAA Paper 2016-1120},
 }
-
-
 
 @article{Ross-2009-ApplOptics,
     author = {T. Sean Ross},
