Added PIV WF paper

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -199,6 +199,16 @@
 	note={AIAA-2016-3348}
 }
 
+@inproceedings{Gordeyev-2016-DC-b,
+	author={Stanislav Gordeyev and Adam Smith},
+	year={2016},
+	title={Studies of the Large-Scale Structure in Turbulent Boundary Layers Using Simultaneous Velocity-Wavefront Measurements},
+	eventdate={ 13-17 Jun 2016},
+	booktitle= {46th AIAA Fluid Dynamics Conference},
+	location={Washington, DC},
+	note={AIAA-2016-3804},
+}
+
 @article{Guala-2006-JFM,
 	author={M. Guala and S. E. Hommema and R. J. Adrian},
 	year={2006},
