added siegenthaler paper

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -346,6 +346,13 @@
 	keywords={Aerospace Engineering; Optics; Applied Sciences; Pure Sciences; Aperture Filtration; Wavefront Correction; Atmospheric Turbulence; Optical Aberrations}
 }
 
+@inproceedings{Siegenthaler-2005-Toronto,
+	author={John P Siegenthaler and Stanislav Gordeyev and Eric Jumper},
+	year={2005},
+	title={Shear Layers and Aperture Effects for Aero-Optics},
+	publisher={American Institute of Aeronautics and Astronautics},
+}
+
 @phdthesis{Smith-2015-Thesis,
 	author={Adam E. Smith},
 	title={Evaluation of passive boundary layer flow control techniques for aero-optic mitigation},
