--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -397,6 +397,14 @@
 	doi={10.2514/3.5384}
 }
 
+@book{Tyson-2012-SPIE,
+	author={Robert K. Tyson and Benjamin W. Frazier},
+	year={2012},
+	title={Field Guide to Adaptive Optics, 2nd Ed},
+	publisher={SPIE Press},
+	isbn={0-8194-9017-2}
+}
+
 @article{Wang-2012-AnnualReview,
 	author={Meng Wang and Ali Mani and Stanislav Gordeyev},
 	year={2012},
