added anderson gladstone dale

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -22,6 +22,22 @@
 	url={http://dx.doi.org.proxy.library.nd.edu/10.1017/S0022112000001580}
 }
 
+@article{Anderson-1969-PhysOfFluids,
+	issn = "0031-9171",
+	journal = "Physics of Fluids",
+	pages = "I-57--I-60",
+	volume = "12",
+	publisher = "American Institute of Physics",
+	number = "5",
+	year = "1969",
+	title = "Experimental Determination of the Gladstoneâ€Dale Constants for Dissociating Oxygen",
+	language = "eng",
+	author = "Anderson, J. H. B.",
+	keywords = "Part III. Research Papers",
+	month = "May",
+}
+
+
 @inproceedings{Burns-2015-Kissimme,
 	author={William R. Burns and Eric J. Jumper and Stanislav Gordeyev},
 	title={A Latency-Tolerant Architecture for Airborne Adaptive Optic Systems},
