fixed some typos

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -86,7 +86,7 @@
   journal={ProQuest Dissertations and Theses},
   pages={311},
   note={Copyright - Database copyright ProQuest LLC; ProQuest does not claim copyright in the individual underlying works; Last updated - 2016-03-10},
-  abstract={Development of airborne laser systems began in the 1970s with the Airborne Laser Laboratory, a KC135 aircraft with a CO2 laser projected from a beam director mounted atop the aircraft as a hemispherical turret encased in a fairing. It was known that the turbulent air flowing around the turret and separating over the aft portions of the turret would aberrate the laser beam's wavefront (the aero-optic problem); however, the CO2 wavelength, 10.6 μm, was long enough that the aberrating turbulent flow decreased the system's performance by only about 5%. With newer airborne laser systems using wavelengths nearer 1 μm, this same turbulent flow now reduces system performance by more than 95%. It has long been known that if a conjugate waveform is used to pre-distort the outgoing laser's wavefront, the turbulence will actually correct the beam, restoring most of the system's performance. The problem with performing this compensation is that the system for performing this function, the so-called adaptive-optic system, is bandwidth limited in its conventional architecture, by orders of magnitude lower than that required to correct for the aero-optic effects. The research described in this dissertation explored changing the adaptive-optic paradigm from feedback to feed-forward by adding flow control to make the aberration environment predictable rather than unpredictable. This research demonstrated that the turbulent high-speed separated shear layer could be robustly forced into a regularized form. It was also shown that these regularized velocity patterns in the shear layer produced periodic optical aberrations. Extensive measurement and analysis of these convecting aberrations yielded the underlying structure required to produce the conjugate wavefront correction patterns required for a range of laser propagation angles through the shear layer. Ultimately, a feed-forward adaptive-optic system was developed and used to demonstrate the highest-bandwidth correction of aero-optic aberrations ever performed; the effective bandwidth of the demonstrated adaptive-optic correction was at least two orders of magnitude greater than the capabilities of existing conventional adaptive-optic systems.},
+  abstract={Development of airborne laser systems began in the 1970s with the Airborne Laser Laboratory, a KC135 aircraft with a CO2 laser projected from a beam director mounted atop the aircraft as a hemispherical turret encased in a fairing. It was known that the turbulent air flowing around the turret and separating over the aft portions of the turret would aberrate the laser beam's wavefront (the aero-optic problem); however, the CO2 wavelength, 10.6 μm, was long enough that the aberrating turbulent flow decreased the system's performance by only about 5\%. With newer airborne laser systems using wavelengths nearer 1 μm, this same turbulent flow now reduces system performance by more than 95\%. It has long been known that if a conjugate waveform is used to pre-distort the outgoing laser's wavefront, the turbulence will actually correct the beam, restoring most of the system's performance. The problem with performing this compensation is that the system for performing this function, the so-called adaptive-optic system, is bandwidth limited in its conventional architecture, by orders of magnitude lower than that required to correct for the aero-optic effects. The research described in this dissertation explored changing the adaptive-optic paradigm from feedback to feed-forward by adding flow control to make the aberration environment predictable rather than unpredictable. This research demonstrated that the turbulent high-speed separated shear layer could be robustly forced into a regularized form. It was also shown that these regularized velocity patterns in the shear layer produced periodic optical aberrations. Extensive measurement and analysis of these convecting aberrations yielded the underlying structure required to produce the conjugate wavefront correction patterns required for a range of laser propagation angles through the shear layer. Ultimately, a feed-forward adaptive-optic system was developed and used to demonstrate the highest-bandwidth correction of aero-optic aberrations ever performed; the effective bandwidth of the demonstrated adaptive-optic correction was at least two orders of magnitude greater than the capabilities of existing conventional adaptive-optic systems.},
   keywords={Applied sciences; Earth sciences; Adaptive-optic correction; Airborne laser; Feed-forward; Flow control; High-subsonic shear layer; Laser beam’s wavefront; Aerospace engineering; Atmospheric sciences; 0725:Atmospheric sciences; 0538:Aerospace engineering},
   isbn={9781124467689},
   language={English},
