Fixed two citations

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -30,7 +30,7 @@
 	publisher = "American Institute of Physics",
 	number = "5",
 	year = "1969",
-	title = "Experimental Determination of the Gladstoneâ€Dale Constants for Dissociating Oxygen",
+	title = "Experimental Determination of the Gladstone-Dale Constants for Dissociating Oxygen",
 	language = "eng",
 	author = "Anderson, J. H. B.",
 	keywords = "Part III. Research Papers",
@@ -125,7 +125,7 @@
  journal = {Proceedings of the Royal Society of London},
  pages = {448-453},
  publisher = {The Royal Society},
- title = {Researches on the Refraction, Dispersion, and Sensitiveness of Liquids. [Abstract]},
+ title = {Researches on the Refraction, Dispersion, and Sensitiveness of Liquids},
  volume = {12},
  year = {1862}
 }
