added 2017 reviewed paper

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -270,6 +270,28 @@
 	isbn={0376-0421}
 }
 
+@article{Jumper-2017-AnnualReview,
+	author = {Jumper, Eric J. and Gordeyev, Stanislav},
+	title = {Physics and Measurement of Aero-Optical Effects: Past and Present},
+	journal = {Annual Review of Fluid Mechanics},
+	volume = {49},
+	number = {1},
+	pages = {419-441},
+	year = {2017},
+	doi = {10.1146/annurev-fluid-010816-060315},
+
+	URL = { 
+		https://doi.org/10.1146/annurev-fluid-010816-060315
+
+	},
+	eprint = { 
+		https://doi.org/10.1146/annurev-fluid-010816-060315
+
+	}
+	,
+	    abstract = { The field of aero-optics is devoted to the study of the effects of turbulent flow fields on laser beams projected from airborne laser systems. This article reviews the early and present periods of research in aero-optics. Both periods generated impressive amounts of research activity; however, the types and amount of data differ greatly in accuracy, quality, and type owing to the development of new types of instrumentation available to collect and analyze the aberrated wave fronts of otherwise collimated laser beams projected through turbulent compressible flow fields of the type that form over beam directors. This review traces the activities and developments associated with both periods but particularly focuses on the development of modern high-bandwidth wave-front sensors used in the present research period. We describe how these modern wave-front data are collected and analyzed and the fluid mechanic information that can be gleaned from them; the use of these data in the fundamental study of turbulence is emphasized. }
+}
+
 @inproceedings{Kemnetz-2016-SanDiego,
 	author={Matthew R. Kemnetz and Stanislav Gordeyev},
 	title={Optical investigation of large-scale boundary-layer structures},
