added Morrida paper

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -334,6 +334,22 @@
 	url={http://scitation.aip.org/content/aip/journal/pof2/22/6/10.1063/1.3453711}
 }
 
+@article{Morrida-2017-ApplOpt,
+	author = {Jacob Morrida and Stanislav Gordeyev and Nicholas De Lucca and Eric J. Jumper},
+	journal = {Applied Optics},
+	keywords = {Laser beam transmission; Turbulence; Wave-front sensing; Flow diagnostics; Turbulence; Laser beams; Laser induced fluorescence; Position sensing; Spatial resolution; Temporal resolution; Wavefronts},
+	number = {16},
+	pages = {4814--4824},
+	publisher = {OSA},
+	title = {Shock-related effects on aero-optical environment for hemisphere-on-cylinder turrets at transonic speeds},
+	volume = {56},
+	month = {Jun},
+	year = {2017},
+	url = {http://ao.osa.org/abstract.cfm?URI=ao-56-16-4814},
+	doi = {10.1364/AO.56.004814},
+	abstract = {The aero-optical environment around a hemisphere-on-cylinder turret with both flat and conformal windows was studied experimentally in flight using the Airborne Aero-Optical Laboratory-Transonic for a range of subsonic and transonic Mach numbers between 0.5 and 0.8. Above M$=$0.6, the local shock appeared near the top of the turret, causing additional aero-optical distortions at side-looking angles. Using time-resolved wavefronts, instantaneous shock locations were extracted and analyzed. The mean shock location was found to be near a viewing angle, \&\#x03B1;$=$80\&\#x2009;\&\#x2009;deg for both window types at M$=$0.7 and 0.8. For M$=$0.8, the shock has a single frequency peak at StD$=$0.15, the same as for the unsteady separation line, indicating a lock-in mechanism between the shock and the separated wake region. Analysis of aero-optical distortions in the wake indicated that the wake dynamics were beginning to be affected by the shock only at high transonic speed of M$=$0.8 for the conformal-window turret.},
+}
+
 @misc{Ranade-2016-Thesis,
   author={Ranade,Piyush M.},
   year={2016},
