Added Alice paper

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -350,6 +350,20 @@
 	abstract = {The aero-optical environment around a hemisphere-on-cylinder turret with both flat and conformal windows was studied experimentally in flight using the Airborne Aero-Optical Laboratory-Transonic for a range of subsonic and transonic Mach numbers between 0.5 and 0.8. Above M$=$0.6, the local shock appeared near the top of the turret, causing additional aero-optical distortions at side-looking angles. Using time-resolved wavefronts, instantaneous shock locations were extracted and analyzed. The mean shock location was found to be near a viewing angle, \&\#x03B1;$=$80\&\#x2009;\&\#x2009;deg for both window types at M$=$0.7 and 0.8. For M$=$0.8, the shock has a single frequency peak at StD$=$0.15, the same as for the unsteady separation line, indicating a lock-in mechanism between the shock and the separated wake region. Analysis of aero-optical distortions in the wake indicated that the wake dynamics were beginning to be affected by the shock only at high transonic speed of M$=$0.8 for the conformal-window turret.},
 }
 
+@article{Nightingale-2009-AIAA,
+issn = {0001-1452},
+journal = {AIAA Journal},
+pages = {2298--2305},
+volume = {47},
+number = {10},
+year = {2009},
+title = {Optical Characterization of a Simulated Weakly Compressible Shear Layer: Unforced and Forced},
+language = {eng},
+author = {Nightingale, Alice M and Gordeyev, Stanislav and Jumper, Eric J},
+keywords = {Shear (Mechanics) -- Research ; Vorticity -- Research;},
+}
+
+
 @misc{Ranade-2016-Thesis,
   author={Ranade,Piyush M.},
   year={2016},
@@ -435,7 +449,7 @@
 	url={http://www.osapublishing.org/abstract.cfm?URI=josa-70-8-998}
 }
 
-@article{Sutton-AIAA-1969,
+@article{Sutton-1969-AIAA,
 	author={G. W. Sutton},
 	year={1969},
 	title={Effect of turbulent fluctuations in an optically active fluid medium.},
