added defense News

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -1,6 +1,6 @@
 %
 % Matthew Kemnetz
-% 4 Dec 2018
+% 4 Jan 2019
 %
 
 
@@ -363,6 +363,13 @@ author = {Nightingale, Alice M and Gordeyev, Stanislav and Jumper, Eric J},
 keywords = {Shear (Mechanics) -- Research ; Vorticity -- Research;},
 }
 
+@misc{Obering-2018-DefenseNews,
+  key={Defense News},
+  title = {3 reasons why the time is now for directed energy},
+  howpublished = {\url{https://www.defensenews.com/opinion/commentary/2018/08/01/3-reasons-why-the-time-is-now-for-directed-energy/}},
+  year={2018},
+  note = {Accessed: 2018-01-04}
+}
 
 @misc{Ranade-2016-Thesis,
   author={Ranade,Piyush M.},
