--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -324,7 +324,7 @@
   pages={741–773}
 }
 
-@book{Kundu-2012-Fluid Mechanics,
+@book{Kundu-2012-FluidMechanics,
 	abstract = {Fluid mechanics, the study of how fluids behave and interact under various forces and in various applied situations-whether in the liquid or gaseous state or both-is introduced and comprehensively covered in this widely adopted text. Revised and updated by Dr. David Dowling, Fluid Mechanics, Fifth Edition is suitable for both a first or second course in fluid mechanics at the graduate or advanced undergraduate level. The leading advanced general text on fluid mechanics, Fluid Mechanics, 5e includes a free copy of the DVD "Multimedia Fluid Mechanics," second edition. With the inclusion of the DVD, students can gain additional insight about fluid flows through nearly 1,000 fluids video clips, can conduct flow simulations in any of more than 20 virtual labs and simulations, and can view dozens of other new interactive demonstrations and animations, thereby enhancing their fluid mechanics learning experience. Text has been reorganized to provide a better flow from topic to topic and to consolidate portions that belong together. Changes made to the book's pedagogy accommodate the needs of students who have completed minimal prior study of fluid mechanics. More than 200 new or revised end-of-chapter problems illustrate fluid mechanical principles and draw on phenomena that can be observed in everyday life. Includes free Multimedia Fluid Mechanics 2e DVD. Â© 2012 Elsevier Inc. All rights reserved.},
 	publisher = {Elsevier Inc.},
 	isbn = {9780123821003},
