fixed Gilbert book

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -119,7 +119,8 @@
 }
 
 @book{Gilbert-1982-AOPhenom,
-    abstract = {Description This volume is devoted to a systematic examination of the scientific and practical problems that can arise in adapting the new technology of laser beam transmission within the atmosphere to such uses as laser radar, laser beam communications, laser weaponry, and the developing fields of meteorological probing and laser energy transmission, among others. The articles in this book were prepared by specialists in universities, industry, and government laboratories, both military and civilian, and represent an up-to-date survey of the field. The physical problems encountered in such seemingly straightforward applications of laser beam transmission have turned out to be unusually complex. A high intensity radiation beam traversing the atmosphere causes heat-up and breakdown of the air, changing its optical properties along the path, so that the process becomes a nonsteady interactive one. Should the path of the beam include atmospheric turbulence, the resulting nonsteady degradation obviously would affect its reception adversely. An airborne laser system unavoidably requires the beam to traverse a boundary layer or a wake, with complex consequences. These and other effects are examined theoretically and experimentally in this volume. In each case, whereas the phenomenon of beam degradation constitutes a difficulty for the engineer, it presents the scientist with a novel experimental opportunity for meteorlogical or physical research and thus becomes a fruitful nuisance! </p>},
+    abstract = {Description This volume is devoted to a systematic examination of the scientific and practical problems that can arise in adapting the new technology of laser beam transmission within the atmosphere to such uses as laser radar, laser beam communications, laser weaponry, and the developing fields of meteorological probing and laser energy transmission, among others. The articles in this book were prepared by specialists in universities, industry, and government laboratories, both military and civilian, and represent an up-to-date survey of the field. The physical problems encountered in such seemingly straightforward applications of laser beam transmission have turned out to be unusually complex. A high intensity radiation beam traversing the atmosphere causes heat-up and breakdown of the air, changing its optical properties along the path, so that the process becomes a nonsteady interactive one. Should the path of the beam include atmospheric turbulence, the resulting nonsteady degradation obviously would affect its reception adversely. An airborne laser system unavoidably requires the beam to traverse a boundary layer or a wake, with complex consequences. These and other effects are examined theoretically and experimentally in this volume. In each case, whereas the phenomenon of beam degradation constitutes a difficulty for the engineer, it presents the scientist with a novel experimental opportunity for meteorlogical or physical research and thus becomes a fruitful nuisance!},
+    author = {Keith G. Gilbert and Leonard J. Otten},
     publisher = {American Institute of Aeronautics and Astronautics},
     isbn = {9780915928606},
     year = {1982},
