Added fiber optic paper

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -1,6 +1,6 @@
 %
 % Matthew Kemnetz
-% 13 Jan 2019
+% 14 Jan 2019
 %
 
 
@@ -254,6 +254,20 @@
 	abstract={"Turbulence pervades our world, from weather patterns to the air entering our lungs. This book describes methods that reveal its structures and dynamics. Building on the existence of coherent structures - recurrent patterns - in turbulent flows, it describes mathematical methods that reduce the governing (Navier-Stokes) equations to simpler forms that can be understood more easily. This second edition contains a new chapter on the balanced proper orthogonal decomposition: a method derived from control theory that is especially useful for flows equipped with sensors and actuators. It also reviews relevant work carried out since 1995. The book is ideal for engineering, physical science and mathematics researchers working in fluid dynamics and other areas in which coherent patterns emerge"-- "This book describes methods that reveal its structures and dynamics. Building on the existence of coherent structures - recurrent patterns - in turbulent flows, it describes mathematical methods that reduce the governing (Navier-Stokes) equations to simpler forms that can be understood more easily. This second edition contains a new chapter on the balanced proper orthogonal decomposition: a method derived from control theory that is especially useful for flows equipped with sensors and actuators. It also reviews relevant work carried out since 1995"--},
 	isbn={9781107008250 1107008255},
 	language={English}
+}
+
+@inproceedings{Idachaba-2014-EngCS,
+	issn = {20780958},
+	journal = {Lecture Notes in Engineering and Computer Science},
+	pages = {438--442},
+	volume = {1},
+	publisher = {Newswood Limited},
+	isbn = {9789881925275},
+	year = {2014},
+	title = {Future trends in fiber optics communication},
+	copyright = {Copyright 2014 Elsevier B.V., All rights reserved.},
+	author = {Idachaba, F. and Ike, D.U. and Hope, O.},
+	keywords = {Bandwidth ; Broadband ; Fiber Optics ; Latency ; Telecommunication},
 }
 
 @article{Jacobi-2011-JFM,
