Added a paper for history of ABL/ALL

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -429,6 +429,19 @@ keywords = {Shear (Mechanics) -- Research ; Vorticity -- Research;},
 	note={AIAA Paper 2016-1120},
 }
 
+@article{Ross-2011-AirPowerHist,
+	issn = {1044-016X},
+	journal = {Air Power History},
+	volume = {58},
+	publisher = {Air Force Historical Foundation},
+	number = {1},
+	year = {2011},
+	title = {Origins of the Airborne Laser},
+	language = {English},
+	author = {Ross, Cameron L.},
+	keywords = {Military Electronics Industry -- Military Aspects ; Military Lasers -- Military Aspects ; Air Forces -- Military Aspects ; Boeing Co. Boeing Defense And Space Group},
+}
+
 @article{Ross-2009-ApplOptics,
     author = {T. Sean Ross},
     journal = {Appl. Opt.},
