added a ATL citation

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -58,6 +58,12 @@
 	note={AIAA Paper 2010-0434},
 }
 
+@misc{Cress-2010-Dissertation,
+	author={Jacob A. Cress},
+	year={2010},
+	title={Optical Aberrations Caused by Coherent Structures in a Subsonic, Compressible, Turbulent Boundary Layer}
+}
+
 @inproceedings{DeLucca-2012-Nashville,
 	author={Nicholas De Lucca and Stanislav Gordeyev and Eric Jumper},
 	year={2012},
@@ -102,12 +108,6 @@
   year={2015}
 }
 
-@misc{Cress-2010-Dissertation,
-	author={Jacob A. Cress},
-	year={2010},
-	title={Optical Aberrations Caused by Coherent Structures in a Subsonic, Compressible, Turbulent Boundary Layer}
-}
-
 @article{Dennis-2011-JFM,
 	author={David J. C. Dennis and Timothy B. Nickels},
 	year={2011},
@@ -117,6 +117,17 @@
 	pages={180-217},
 	url={http://dx.doi.org.proxy.library.nd.edu/10.1017/S0022112010006324}
 }
+
+@article{ElectronicsForYou-2016-Athena,
+issn = {0013-516X},
+journal = {Electronics For You},
+publisher = {Athena Information Solutions Pvt. Ltd.},
+year = {2016},
+title = {Defence Electronics - Part 8 of 8: Directed Energy Weapons: More on High-Energy Laser Weapons},
+language = {eng},
+keywords = {Military Lasers ; Military Aspects ; Directed-Energy Weapons ; Military Aspects ; Military Electronics Industry ; Military Aspects ; Military Electronics Industry ; Buildings and Facilities},
+}
+
 
 @book{Gilbert-1982-AOPhenom,
     abstract = {Description This volume is devoted to a systematic examination of the scientific and practical problems that can arise in adapting the new technology of laser beam transmission within the atmosphere to such uses as laser radar, laser beam communications, laser weaponry, and the developing fields of meteorological probing and laser energy transmission, among others. The articles in this book were prepared by specialists in universities, industry, and government laboratories, both military and civilian, and represent an up-to-date survey of the field. The physical problems encountered in such seemingly straightforward applications of laser beam transmission have turned out to be unusually complex. A high intensity radiation beam traversing the atmosphere causes heat-up and breakdown of the air, changing its optical properties along the path, so that the process becomes a nonsteady interactive one. Should the path of the beam include atmospheric turbulence, the resulting nonsteady degradation obviously would affect its reception adversely. An airborne laser system unavoidably requires the beam to traverse a boundary layer or a wake, with complex consequences. These and other effects are examined theoretically and experimentally in this volume. In each case, whereas the phenomenon of beam degradation constitutes a difficulty for the engineer, it presents the scientist with a novel experimental opportunity for meteorlogical or physical research and thus becomes a fruitful nuisance!},
