added fitzgerald/jumper papers

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -128,6 +128,30 @@ language = {eng},
 keywords = {Military Lasers ; Military Aspects ; Directed-Energy Weapons ; Military Aspects ; Military Electronics Industry ; Military Aspects ; Military Electronics Industry ; Buildings and Facilities},
 }
 
+@article{Fitzgerald-2002-AIAA,
+	issn = {0001-1452},
+	journal = {AIAA Journal},
+	pages = {267--275},
+	volume = {40},
+	number = {2},
+	year = {2002},
+	title = {Aperture Effects on the Aerooptical Distortions Produced by a Compressible Shear Layer},
+	language = {eng},
+	author = {Fitzgerald, Edward J and Jumper, Eric J},
+}
+
+@article{Fitzgerald-2004-JFM,
+	issn = {0022-1120},
+	abstract = {The aero-optical distortions caused by compressible flows have been used by researchers for flow diagnostics and accepted by designers of airborne optical systems as a performance penalty. In order to estimate these distortions, an understanding of the optical distortion mechanism is required. This article examines the mechanisms which produce a variable-density field (and accompanying index-of-refraction field) in a nearly incompressible shear-layer flow. The two-dimensional-shear-layer velocity field was approximated using a discrete vortex model. From this known velocity field, the pressure and density fields were determined by iteratively solving the unsteady Euler equations. The resulting index-of-refraction field produced simulated schlieren images which closely resemble experimental schlierens. Optical wavefronts computed from the simulation reasonably match the behaviour of large-scale aberrations measured in a transonic wind tunnel. Small-scale distortions in the experimental data may have been caused by boundary layers on the splitter plate and tunnel walls or by three-dimensional effects that were not simulated.},
+	journal = {Journal of Fluid Mechanics},
+	pages = {153--189},
+	volume = {512},
+	year = {2004},
+	title = {The optical distortion mechanism in a nearly incompressible free shear layer},
+	language = {eng},
+	author = {FITZGERALD, E. J. and JUMPER, E. J.},
+	keywords = {Engineering ; Applied Sciences ; Physics;},
+}
 
 @book{Gilbert-1982-AOPhenom,
     abstract = {Description This volume is devoted to a systematic examination of the scientific and practical problems that can arise in adapting the new technology of laser beam transmission within the atmosphere to such uses as laser radar, laser beam communications, laser weaponry, and the developing fields of meteorological probing and laser energy transmission, among others. The articles in this book were prepared by specialists in universities, industry, and government laboratories, both military and civilian, and represent an up-to-date survey of the field. The physical problems encountered in such seemingly straightforward applications of laser beam transmission have turned out to be unusually complex. A high intensity radiation beam traversing the atmosphere causes heat-up and breakdown of the air, changing its optical properties along the path, so that the process becomes a nonsteady interactive one. Should the path of the beam include atmospheric turbulence, the resulting nonsteady degradation obviously would affect its reception adversely. An airborne laser system unavoidably requires the beam to traverse a boundary layer or a wake, with complex consequences. These and other effects are examined theoretically and experimentally in this volume. In each case, whereas the phenomenon of beam degradation constitutes a difficulty for the engineer, it presents the scientist with a novel experimental opportunity for meteorlogical or physical research and thus becomes a fruitful nuisance!},
