added hecht book

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -279,6 +279,19 @@ keywords = {Military Lasers ; Military Aspects ; Directed-Energy Weapons ; Milit
 	url={http://dx.doi.org.proxy.library.nd.edu/10.1017/S0022112006008871}
 }
 
+@book{Hecht-2002-Book,
+publisher = {Addison-Wesley},
+	isbn = {0805385665},
+	year = {2002},
+	title = {Optics},
+	edition = {4th ed..},
+	language = {eng},
+	address = {Reading, Mass.},
+	author = {Hecht, Eugene},
+	keywords = {Optics},
+	lccn = {2001032540},
+}
+
 @book{Holmes-2012,
 	author={Philip Holmes},
 	year={2012},
