--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -407,6 +407,21 @@ publisher = {Addison-Wesley},
 	keywords = {Fluid Mechanics ; Technology;},
 }
 
+@article{Kyrazis-OptEng-2013,
+	issn = {0091-3286},
+	abstract = {<p>We discuss aspects of the development of the Airborne Laser Laboratory. Our discussion is historical in nature and consists of the text from a speech given on the occasion of the Airborne Laser Laboratory leaving Kirtland Air Force Base (AFB) to fly to Wright-Patterson AFB to become an exhibit at the National Museum of the United States Air Force. The last part of the discussion concerns the inception of the study of aero-optics as an area of research and some of the milestones in the understanding of the causes and prediction of aero-optical effects.</p>},
+	journal = {Optical Engineering},
+	pages = {071403--071403},
+	volume = {52},
+	publisher = {Society of Photo-Optical Instrumentation Engineers},
+	number = {7},
+	year = {2013},
+	title = {Airborne Laser Laboratory departure from Kirtland Air Force Base and a brief history of aero-optics},
+	language = {eng},
+	author = {Kyrazis, Demos T},
+	keywords = {Airborne Laser ; Beam Control ; Aero-Optics ; Engineering ; Visual Arts ; Physics},
+}
+
 
 @article{Marusic-2010-PhysOfFluids,
 	author={I. Marusic and B. J. McKeon and P. A. Monkewitz and H. M. Nagib and A. J. Smits and K. R. Sreenivasan},
