--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -383,6 +383,18 @@ publisher = {Addison-Wesley},
 	location={Grapevine, Texas},
 	note={AIAA Paper 2017-1344},
 }
+@book{Klein-Book-1986,
+	publisher = {Wiley},
+	isbn = {0471872970},
+	year = {1986},
+	title = {Optics},
+	edition = {2nd ed..},
+	language = {eng},
+	address = {New York},
+	author = {Klein, Miles V.},
+	keywords = {Optics},
+	lccn = {85022598},
+}
 
 @article{Kline-1967-JFM,
   author={Kline, S. J. and Reynolds, W. C. and Schraub, F. A. and Runstadler, P. W.},
