Fixed Klein Book

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -383,7 +383,7 @@ publisher = {Addison-Wesley},
 	location={Grapevine, Texas},
 	note={AIAA Paper 2017-1344},
 }
-@book{Klein-Book-1986,
+@book{Klein-1986-Book,
 	publisher = {Wiley},
 	isbn = {0471872970},
 	year = {1986},
