Added Griffiths Book

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -269,6 +269,18 @@ keywords = {Military Lasers ; Military Aspects ; Directed-Energy Weapons ; Milit
 	note={AIAA-2016-3804},
 }
 
+@book{GriffithsElectrodynamics-1981-Book,
+	publisher = {Prentice-Hall},
+	isbn = {013481374X},
+	year = {1981},
+	title = {Introduction to electrodynamics},
+	language = {eng},
+	address = {Englewood Cliffs, N.J.},
+	author = {Griffiths, David J},
+	keywords = {Electrodynamics},
+	lccn = {80011508},
+}
+
 @article{Guala-2006-JFM,
 	author={M. Guala and S. E. Hommema and R. J. Adrian},
 	year={2006},
