--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -1,6 +1,6 @@
 %
 % Matthew Kemnetz
-% 2 Feb 2019
+% 9 Feb 2019
 %
 
 
@@ -174,6 +174,20 @@ keywords = {Military Lasers ; Military Aspects ; Directed-Energy Weapons ; Milit
  volume = {12},
  year = {1862}
 }
+
+@book{Goodman-2005-book,
+	publisher = {Roberts & Co.},
+	isbn = {0974707724},
+	year = {2005},
+	title = {Introduction to Fourier optics},
+	edition = {3rd ed..},
+	language = {eng},
+	address = {Englewood, Colo.},
+	author = {Goodman, Joseph W},
+	keywords = {Fourier transform optics},
+	lccn = {2004023213},
+}
+
 
 @article{Gordeyev-2010-ProgInAero,
     title = "Fluid dynamics and aero-optics of turrets ",
