changed & to and

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -176,11 +176,11 @@ keywords = {Military Lasers ; Military Aspects ; Directed-Energy Weapons ; Milit
 }
 
 @book{Goodman-2005-book,
-	publisher = {Roberts & Co.},
+	publisher = {Roberts and Co.},
 	isbn = {0974707724},
 	year = {2005},
 	title = {Introduction to Fourier optics},
-	edition = {3rd ed..},
+	edition = {3rd ed.},
 	language = {eng},
 	address = {Englewood, Colo.},
 	author = {Goodman, Joseph W},
