fixed & in tyson book

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -639,7 +639,7 @@ keywords = {Shear (Mechanics) -- Research ; Vorticity -- Research;},
 
 @book{Tyson-2011-book,
 	series = {Optics and optoelectronics},
-	publisher = {Taylor & Francis},
+	publisher = {Taylor and Francis},
 	isbn = {9781439808597},
 	year = {2011},
 	title = {Principles of adaptive optics},
