add burns dissertation

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -48,6 +48,12 @@
 	note={AIAA Paper 2015-0679},
 }
 
+@misc{Burns-2016-Dissertation,
+	author={W. Robert Burns},
+	year={2016},
+	title={Statistical Learning Methods for Aero-Optic Wavefront Prediction and Adaptive-Optic Latency Compensation}
+}
+
 @inproceedings{Cress-2010-Orlando,
 	author={Jacob A. Cress and Stanislav Gordeyev and  Eric J. Jumper},
 	title={Aero-Optical Measurements in a Heated, Subsonic, Turbulent Boundary Layer},
