added malley paper

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -466,6 +466,20 @@ publisher = {Addison-Wesley},
 	keywords = {Airborne Laser ; Beam Control ; Aero-Optics ; Engineering ; Visual Arts ; Physics},
 }
 
+@article{Malley-1992-ApplOpt,
+	issn = {0003-6935},
+	journal = {Applied Optics},
+	pages = {4440--4443},
+	volume = {31},
+	publisher = {OPTICAL SOC AMER},
+	number = {22},
+	year = {1992},
+	title = {BEAM-JITTER MEASUREMENTS OF TURBULENT AEROOPTICAL PATH DIFFERENCES},
+	language = {English},
+	author = {Malley, MM and Sutton, Gw and Kincheloe, N},
+	keywords = {Aberration ; Michelson Interferometers ; Optical Paths ; Power Spectra ; Turbulent Flow ; Air Flow ; Charge Coupled Devices ; Fourier Transformation ; Turbulent Mixing ; Instrumentation And Photography (Ah) ; Article;},
+}
+
 
 @article{Marusic-2010-PhysOfFluids,
 	author={I. Marusic and B. J. McKeon and P. A. Monkewitz and H. M. Nagib and A. J. Smits and K. R. Sreenivasan},
