hutchins and marusic

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -336,6 +336,19 @@ publisher = {Addison-Wesley},
 	language={English}
 }
 
+@article{Hutchins-2007-PhilTrans,
+	issn = {1364-503X},
+	abstract = {Hot-wire data acquired in a high Reynolds number facility are used to illustrate the need for adequate scale separation when considering the coherent structure in wall-bounded turbulence. It is found that a large-scale motion in the log region becomes increasingly comparable in energy to the near-wall cycle as the Reynolds number increases. Through decomposition of fluctuating velocity signals, it is shown that this large-scale motion has a distinct modulating influence on the small-scale energy (akin to amplitude modulation). Reassessment of DNS data, in light of these results, shows similar trends, with the rate and intensity of production due to the near-wall cycle subject to a modulating influence from the largest-scale motions.},
+	journal = {Philosophical transactions. Series A, Mathematical, physical, and engineering sciences},
+	volume = {365},
+	number = {1852},
+	year = {2007},
+	title = {Large-scale influences in near-wall turbulence},
+	language = {eng},
+	author = {Hutchins, Nicholas and Marusic, Ivan},
+	keywords = {Engineering ; Sciences (General) ; Physics ; Mathematics;},
+}
+
 @inproceedings{Idachaba-2014-EngCS,
 	issn = {20780958},
 	journal = {Lecture Notes in Engineering and Computer Science},
